Switched to JDK 12 GA Switched to JDK 13 EA Build 30 Updated gradle to 5.3